# axum_demo

./: .gitignore  Cargo.toml  README.md  database.db
handle/: Cargo.toml
handle/src/: lib.rs
handle/src/controller/: test.rs  user.rs
handle/src/form/: common.rs  mod.rs  protocol.rs  test.rs  user.rs  validate.rs
handle/src/middleware/: test.rs
handle/src/model/: db.rs  user.rs
handle/src/services/: user.rs
src/: main.rs
