[package]
name = "handle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
mysql = "*"
axum = "0.5.13" # web 服务器
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls"] } #  HTTP 客户端
tokio = { version = "1", features = ["full"]} # 异步库
serde = { version = "1.0", features = ["derive"] }# json 宏驱动
serde_json = "1.0.68" #json处理
validator = { version = "0.16.0", features = ["derive"] }
thiserror = "1.0.29"
async-trait = "0.1"
http-body = "0.4.3"

